fixed multi-page rendering, unified code flow for multi-page and single-page